--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-    <link rel="stylesheet" href="./index.css" />
-    <script src="./index.js"></script>
+    <link rel="stylesheet" href="/static/index.css" />
+    <script src="/static/index.js"></script>
   </head>
   <body>
     <nav>
