--- a/static/attraction.html
+++ b/static/attraction.html
@@ -53,7 +53,7 @@
           </div>
         </div>
       </div>
-      <hr />
+      <div class="line"></div>
       <div class="information">
         <div class="info"></div>
         <div class="address"></div>
