--- a/static/attraction.html
+++ b/static/attraction.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Attraction</title>
-    <link rel="stylesheet" href="/static/attraction.css" />
-    <script src="/static/attraction.js"></script>
+    <link rel="stylesheet" href="/static/css/attraction.css" />
+    <link rel="stylesheet" href="/static/css/base.css" />
+    <script type="module" src="/static/js/attraction.js"></script>
   </head>
-  <body>
+  <body class="attraction">
+    <div class="shadow"></div>
+    <div class="sign_in_box block_style">
+      <div class="border_style"></div>
+      <div class="block_title">登入會員帳號</div>
+      <input
+        type="email"
+        class="block_context signInEmail"
+        placeholder="輸入電子信箱"
+      />
+      <input
+        type="password"
+        class="block_context signInPassword"
+        placeholder="輸入密碼"
+      />
+      <button class="block_btn">登入帳戶</button>
+      <div class="alert_text"></div>
+      <div class="block_text sign_to_register">還沒有帳戶？點此註冊</div>
+      <img class="sign_in_x x_style" src="/static/img/x.png" />
+    </div>
+
+    <div class="register_box block_style">
+      <div class="border_style"></div>
+      <div class="block_title">註冊會員帳號</div>
+      <input
+        type="text"
+        class="block_context registerName"
+        placeholder="輸入姓名"
+      />
+      <input
+        type="email"
+        class="block_context registerEmail"
+        placeholder="輸入電子信箱"
+      />
+      <input
+        type="password"
+        class="block_context registerPassword"
+        placeholder="輸入密碼"
+      />
+      <button class="block_btn">註冊新帳戶</button>
+      <div class="alert_text"></div>
+      <div class="block_text register_to_sign">已經有帳戶了？點此登入</div>
+      <img class="register_x x_style" src="/static/img/x.png" />
+    </div>
     <nav>
       <div class="nav_container">
         <div class="nav_title">台北一日遊</div>
@@ -18,16 +62,8 @@
     <main>
       <div class="menu">
         <div class="current_pic">
-          <img
-            onclick="plusSlide(-1)"
-            class="left_arrow"
-            src="https://s3-alpha-sig.figma.com/img/6778/6302/0ccc5ce8b30b3d331a45ecdf90f129e1?Expires=1743984000&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=t9ljRECKLlwZxefnrGN17aGuKxb59ozXH2r2rvlPbZ0q-Jy4PZ7ro2VrMclkCME7gfIThqJ1bf~m589-WvofT3qJ25gSXZkYpG6DP29Y6uhGd7y5cfhePEfUgnivqhzZDTTb005xSjbbMcp5dOxS7nsWxB2An2kSb5J2hwDx5e-V7AwAdacvbdM7fHrtXLdvB2dHOWlFIjUCIxQQzsAJ7HEzk2m2LUxTOO10DzK7nZvaRPW6GqxrX1ZS1Yd6lVYGmeFUlp0NBeWEFQFTVx6wr067PXhxq2i8YoEAUuEGMFBKb7lIs~Vvvdv~LEsWh6qoH3vBNoDMb4Bu3A8Pr2vvLQ__"
-          />
-          <img
-            onclick="plusSlide(1)"
-            class="right_arrow"
-            src="https://s3-alpha-sig.figma.com/img/2411/4817/bdfa2bd566c1379581f5b31c6a6a01bc?Expires=1743984000&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=pkrEr9xDZ73-AxZTh6WGOd7l~IVIdILz7gE-UCdymO5QASWgNN9xMvTqaP9VhLCB9E52GlS6Iqg1Lc0sPDa7OYToHjBy8o7YngQlGwEEDvKKk1Dqzezi80clnFsRuZCupsuQ1gne4M17dJ7algfVDoBDWjF3Zf8w-6Oz6lWifOvxiN05L~1sAgXplUf2oUCgntISIdKXB~6lxDoGc8P2CgWn1jntELm5741HOZFYAxgjxL1boItue8a7PpJ4OJfIjWcKdau-cGuwXZmd9atJE1nsEkPF7z00FeuTHLttq7QDSDPxXGvwvXuCZPtoczc938m5gTppHs7nrdQG0-Uq7A__"
-          />
+          <img class="left_arrow" src="/static/img/attraction_left.png" />
+          <img class="right_arrow" src="/static/img/attraction_right.png" />
           <div class="circles"></div>
         </div>
         <div class="profile">
