--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-    <link rel="stylesheet" href="/static/index.css" />
-    <script src="/static/index.js"></script>
+    <link rel="stylesheet" href="/static/css/index.css" />
+    <link rel="stylesheet" href="/static/css/base.css" />
+    <script type="module" src="/static/js/index.js"></script>
   </head>
-  <body>
+  <body class="index">
+    <div class="shadow"></div>
+    <div class="sign_in_box block_style">
+      <div class="border_style"></div>
+      <div class="block_title">登入會員帳號</div>
+      <input
+        type="email"
+        class="block_context signInEmail"
+        placeholder="輸入電子信箱"
+      />
+      <input
+        type="password"
+        class="block_context signInPassword"
+        placeholder="輸入密碼"
+      />
+      <button class="block_btn">登入帳戶</button>
+      <div class="alert_text"></div>
+      <div class="block_text sign_to_register">還沒有帳戶？點此註冊</div>
+      <img class="sign_in_x x_style" src="/static/img/x.png" />
+    </div>
+
+    <div class="register_box block_style">
+      <div class="border_style"></div>
+      <div class="block_title">註冊會員帳號</div>
+      <input
+        type="text"
+        class="block_context registerName"
+        placeholder="輸入姓名"
+      />
+      <input
+        type="email"
+        class="block_context registerEmail"
+        placeholder="輸入電子信箱"
+      />
+      <input
+        type="password"
+        class="block_context registerPassword"
+        placeholder="輸入密碼"
+      />
+      <button class="block_btn">註冊新帳戶</button>
+      <div class="alert_text"></div>
+      <div class="block_text register_to_sign">已經有帳戶了？點此登入</div>
+      <img class="register_x x_style" src="/static/img/x.png" />
+    </div>
     <nav>
       <div class="nav_container">
         <div class="nav_title">台北一日遊</div>
@@ -29,26 +73,18 @@
             placeholder="輸入景點名稱查詢"
           />
           <button onclick="searchKeyword();" class="search_keyword_btn">
-            <img
-              class="search_icon"
-              src="https://s3-alpha-sig.figma.com/img/2287/3bf8/d5750c31481dec07f7101a5fb69baa37?Expires=1743379200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=i7dS4ztAhzgIUxgTrhc2Qupg4~JpmWUHs9tT00QSV0W61klw8vLmRfVhB3Su3UYSh8xeBDteKSGEVdWqiBCs9Ogt~sG2qiJithMQfK0kHhfBOPXnisTgII~b197Jv8mj1IkTWPHvkj8CKOuaIrv~aabQd7hQRQENN73Qtr4OqOUH-ZVhLHrcceWSCt4W0J8nrwKcMSHqCxHtN1DxJOgYtsHeX-9kw57xBrlhTaTkMu6uKxECquXV48iVE7vuFEnXfzCsKZ7IZOEFit1TqnM2uFM1kI1GMjNIkphgwdP2d0ShglBIqCEPJuKi2bYwxp-o2T4vhf5CoTp7phbB0sWj4w__"
-              alt="查詢"
-            />
+            <img class="search_icon" src="/static/img/find.png" alt="查詢" />
           </button>
         </div>
       </div>
     </header>
     <main>
       <div class="list_bar">
-        <img
-          class="left_direction_icon"
-          src="https://s3-alpha-sig.figma.com/img/830b/e0c0/64eb57a930e108c6e6cabaa1b88c6f5e?Expires=1743379200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=R~ljU5ZemWO5nqPT8FhdSWqqRl6uDDZ2cAcyBrlJgJHnT~-p0ED1LnqRkBCps3N6e8SUSjAmNWvqmtw4kgQXzB7mt554qF5g2piN4LNXX4XwbJKWM0WDlTdtokG2ZwBwNj07gf8v~NxtnnXXdtYH9aiuoz-FF1rbBcuBfhP-NNfEm4m0vai3SuacdyXa4iUGfPdCCdJ2dsckdX2mPWSNx206u1LuxXzaVmMiugoMA4nuXjPupteixExwlcSm5IFqdMCVg6Pz4WfcnfO22-VlSJqxf2PIqPFrI1saGKXUoexxNY0vJo0JfxAJvniIrgbECWMZIfJfWQqQS9rLYo~d0w__"
-          alt="左"
-        />
+        <img class="left_direction_icon" src="/static/img/left.png" alt="左" />
         <div class="mrt"></div>
         <img
           class="right_direction_icon"
-          src="https://s3-alpha-sig.figma.com/img/e4fa/ff31/7f6ee79177fc772f6e7b0937f97f574b?Expires=1743379200&Key-Pair-Id=APKAQ4GOSFWCW27IBOMQ&Signature=mKDzOmESNLVKmOyYsIDmAoG5AHmZY39rdYotDOgFe1sSGod3oqjE6lfqpO2KpIrMFFxOP0QXdBOtuey9kMtDE1ULUxejjd9fh304ZKPK9s4FgUJoW4e4yFKvUZUsG48k6soAfHzrCaIDbALPZACa8oxgWNmk~cUvlQGtfmy3sGDhB~t3Kew49eKgXd~1FcNsA7tCSUC7jtYZ0ohdA6hkxhN6vRKieED5bsHXbmZdQK3osTDGsQPVGinAaAmRxHcsSUQEyq9xoRrzdE1ITMOAOOg9s-UmuPSM3Ee3lnAuut7p8-F4HrGpxc6OVev6LoXMy~-c5yA11oUBYl1OhuzVFw__"
+          src="/static/img/right.png"
           alt="右"
         />
       </div>
