--- a/static/attraction.html
+++ b/static/attraction.html
@@ -77,10 +77,9 @@
             <div class="select_date">選擇日期： <input type="date" /></div>
             <div class="select_time">
               選擇時間：
-
-              <input type="radio" name="time" />
+              <input type="radio" name="time" value="morning" />
               <label>上半天</label>
-              <input type="radio" name="time" />
+              <input type="radio" name="time" value="afternoon" />
               <label>下半天</label>
             </div>
 
