--- a/static/booking.html
+++ b/static/booking.html
@@ -6,6 +6,7 @@
     <title>Booking</title>
     <link rel="stylesheet" href="/static/css/booking.css" />
     <link rel="stylesheet" href="/static/css/base.css" />
+    <script src="https://js.tappaysdk.com/sdk/tpdirect/v5.14.0"></script>
     <script type="module" src="/static/js/booking.js"></script>
   </head>
   <body class="booking">
