--- a/static/booking.html
+++ b/static/booking.html
@@ -10,6 +10,7 @@
     <script type="module" src="/static/js/booking.js"></script>
   </head>
   <body class="booking">
+    <div class="loading"></div>
     <div class="shadow"></div>
     <div class="sign_in_box block_style">
       <div class="border_style"></div>
