--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
     <script type="module" src="/static/js/index.js"></script>
   </head>
   <body class="index">
+    <div class="loading"></div>
     <div class="shadow"></div>
     <div class="sign_in_box block_style">
       <div class="border_style"></div>
